--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,14 @@
         </configuration>
         <executions>
           <execution>
+            <id>scala-compile-first</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>add-source</goal>
+              <goal>compile</goal>
+            </goals>
+          </execution>
+          <execution>
             <goals>
               <goal>compile</goal>
               <goal>testCompile</goal>
