--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
       <artifactId>spark-sql_2.11</artifactId>
       <version>2.2.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-hive_2.11 -->
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-hive_2.11</artifactId>
+      <version>2.2.0</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
